Marcas Index Completo

--- a/index.html
+++ b/index.html
@@ -76,6 +76,64 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <section  id="marcas">
+            <div class="container d-none d-md-flex">
+                <div class="row align-items-around">
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/nike.png" alt="" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/Adidas_Logo.svg" alt="" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/New_balance.png" alt="" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/Converse_logo.svg.png" alt="" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/Vans-logo.svg.png" alt="" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                </div>
+            </div>
+            <div id="carouselExample" class="carousel slide d-md-none">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/nike.png" alt="" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/Adidas_Logo.svg" alt="" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/New_balance.png" alt="" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/Converse_logo.svg.png" alt="" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/Vans-logo.svg.png" alt="" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="infoFooter">
