--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <header>
         <nav>
             <div>
-                <img src="img/LogoOpal.png" alt="Logo de Opal" height="80px">
+                <a href="index.html">
+                    <img src="img/LogoOpal.png" alt="Logo de Opal" height="80px">
+                </a>
             </div>
             <div>
-                <input type="text" placeholder="Buscar..." id="buscador">
+                <input type="text" placeholder="Buscar sneakers..." id="buscador">
             </div>
             <div>
                 <button id="registroButton">
@@ -29,6 +31,12 @@
                     </a>
                 </button>
             </div>
+        </nav>
+        <nav id="menu">
+            <a href="">Tienda</a>
+            <a href="subirProducto.html">Subir producto</a>
+            <a href="">Sobre nostros</a>
+            <a href="">Contacto</a>
         </nav>
     </header>
     <main>
@@ -138,7 +146,7 @@
     <footer>
         <div class="infoFooter">
             <div><img src="img/LogoOpal.png" alt="" height="150px" width="150px"></div>
-            <div id="infoFooterMenu">
+            <div class="infoFooterMenu">
                 <h3>Menú</h3>
                 <a href="">Tienda</a>
                 <a href="">Subir producto</a>
@@ -151,7 +159,7 @@
                     Mail: info@opal.com<br>
                     Indicencias: ayuda@opal.com</p>
             </div>
-            <div id="infoFooterMenu">
+            <div class="infoFooterMenu">
                 <h3>Legal</h3>
                 <a href="">Protección de datos</a>
                 <a href="">Terminos y condiciones</a>
