--- a/formulario/signUp.html
+++ b/formulario/signUp.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/signIn.css">
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
-    <title>Document</title>
+    <title>Opal</title>
 </head>
 <body>
     <main>
