--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="css/carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Opal</title>
 </head>
 <body>
@@ -84,23 +85,41 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div id="sobreNosotros">
+            <div class="container">
+                <div id="sobreNosotrosFotos">
+                    <img src="img/sobreNosotros1.jpg" alt="" height="350px" id="foto1">
+                    <img src="img/sobreNosotros2.jpg" alt="" height="350px" id="foto2">
+                </div>
+                <div id="sobreNosotrosInfo">
+                    <h2>Elevando el estilo personal</h2>
+                    <p>
+                        En Opal, entendemos que la moda es una forma de expresión personal, 
+                        y las zapatillas son una parte esencial de ese lenguaje. 
+                        Creemos que el estilo es una extensión de la identidad de cada individuo, 
+                        y estamos aquí para ayudarte a encontrar las zapatillas que reflejen tu personalidad única.
+                    </p>
+                    <button><a href="">Leer más</a></button>
+                </div>
+            </div>
+        </div>
         <section  id="marcas">
             <div class="container d-none d-md-flex">
                 <div class="row align-items-around">
                     <div class="col-4 col-sm-3 col-md row align-items-center">
-                        <img src="img/nike.png" alt="" class="img-fluid mb-7 mb-md-0">
+                        <img src="img/nike.png" alt="Logo de Nike" class="img-fluid mb-7 mb-md-0">
                     </div>
                     <div class="col-4 col-sm-3 col-md row align-items-center">
-                        <img src="img/Adidas_Logo.svg" alt="" class="img-fluid mb-7 mb-md-0">
+                        <img src="img/Adidas_Logo.svg" alt="Logo de Adidas" class="img-fluid mb-7 mb-md-0">
                     </div>
                     <div class="col-4 col-sm-3 col-md row align-items-center">
-                        <img src="img/New_balance.png" alt="" class="img-fluid mb-7 mb-md-0">
+                        <img src="img/New_balance.png" alt="Logo de New Balance" class="img-fluid mb-7 mb-md-0">
                     </div>
                     <div class="col-4 col-sm-3 col-md row align-items-center">
-                        <img src="img/Converse_logo.svg.png" alt="" class="img-fluid mb-7 mb-md-0">
+                        <img src="img/Converse_logo.svg.png" alt="Logo de Converse" class="img-fluid mb-7 mb-md-0">
                     </div>
                     <div class="col-4 col-sm-3 col-md row align-items-center">
-                        <img src="img/Vans-logo.svg.png" alt="" class="img-fluid mb-7 mb-md-0">
+                        <img src="img/Vans-logo.svg.png" alt="Logo de Vans" class="img-fluid mb-7 mb-md-0">
                     </div>
                 </div>
             </div>
@@ -108,27 +127,27 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="container row align-items-center justify-content-center h-100">
-                        <img src="img/nike.png" alt="" class="img-fluid d-block w-75">
+                        <img src="img/nike.png" alt="Logo de Nike" class="img-fluid d-block w-75">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="container row align-items-center justify-content-center h-100">
-                        <img src="img/Adidas_Logo.svg" alt="" class="img-fluid d-block w-75">
+                        <img src="img/Adidas_Logo.svg" alt="Logo de Adidas" class="img-fluid d-block w-75">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="container row align-items-center justify-content-center h-100">
-                        <img src="img/New_balance.png" alt="" class="img-fluid d-block w-75">
+                        <img src="img/New_balance.png" alt="Logo de New Balance" class="img-fluid d-block w-75">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="container row align-items-center justify-content-center h-100">
-                        <img src="img/Converse_logo.svg.png" alt="" class="img-fluid d-block w-75">
+                        <img src="img/Converse_logo.svg.png" alt="Logo de Converse" class="img-fluid d-block w-75">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="container row align-items-center justify-content-center h-100">
-                        <img src="img/Vans-logo.svg.png" alt="" class="img-fluid d-block w-75">
+                        <img src="img/Vans-logo.svg.png" alt="Logo de Vans" class="img-fluid d-block w-75">
                     </div>
                   </div>
                 </div>
@@ -149,7 +168,7 @@
             <div class="infoFooterMenu">
                 <h3>Menú</h3>
                 <a href="">Tienda</a>
-                <a href="">Subir producto</a>
+                <a href="subirProducto.html">Subir producto</a>
                 <a href="">Sobre nosotros</a>
                 <a href="">Contacto</a>
             </div>
