--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="">Tienda</a>
             <a href="subirProducto.html">Subir producto</a>
             <a href="">Sobre nostros</a>
-            <a href="">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </header>
     <main>
@@ -85,13 +85,34 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="container">
+            <div class="shop">
+                <div class="shopInfo">
+                    <h2>Vuestras ventas</h2>
+                    <a href="">Ver todo...</a>
+                </div>
+                <div></div>
+            </div>
+        </div>
         <div id="sobreNosotros">
+            <div id="sobreNosotrosInfo">
+                <h2>Elevando el estilo personal</h2>
+                <p>
+                    En Opal, entendemos que la moda es una forma de expresión personal, 
+                    y las zapatillas son una parte esencial de ese lenguaje. 
+                    Creemos que el estilo es una extensión de la identidad de cada individuo, 
+                    y estamos aquí para ayudarte a encontrar las zapatillas que reflejen tu personalidad única.
+                </p>
+                <button><a href="">Leer más</a></button>
+            </div>
+        </div>
+        <div id="sobreNosotrosPC">
             <div class="container">
-                <div id="sobreNosotrosFotos">
+                <div id="sobreNosotrosPCFotos">
                     <img src="img/sobreNosotros1.jpg" alt="" height="350px" id="foto1">
                     <img src="img/sobreNosotros2.jpg" alt="" height="350px" id="foto2">
                 </div>
-                <div id="sobreNosotrosInfo">
+                <div id="sobreNosotrosPCInfo">
                     <h2>Elevando el estilo personal</h2>
                     <p>
                         En Opal, entendemos que la moda es una forma de expresión personal, 
@@ -101,6 +122,15 @@
                     </p>
                     <button><a href="">Leer más</a></button>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="shop">
+                <div class="shopInfo">
+                    <h2>Sneakers más baratas</h2>
+                    <a href="">Ver todo...</a>
+                </div>
+                <div></div>
             </div>
         </div>
         <section  id="marcas">
@@ -170,7 +200,7 @@
                 <a href="">Tienda</a>
                 <a href="subirProducto.html">Subir producto</a>
                 <a href="">Sobre nosotros</a>
-                <a href="">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </div>
             <div>
                 <h3>Contact:</h3>
