Insercción Base de Datos con PHP

--- a/formulario/Registro/signUp.html
+++ b/formulario/Registro/signUp.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/signIn.css">
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="../../css/normalize.css">
+    <link rel="stylesheet" href="../../css/signIn.css">
+    <link rel="stylesheet" href="../fonts/material-icon/css/material-design-iconic-font.min.css">
     <title>Opal</title>
 </head>
 <body>
     <main>
         <div id="formulario">
-            <a href="../index.html"><img src="../img/LogoOpal.png" alt="" height="100px"></a>
+            <a href="../../index.html"><img src="../../img/LogoOpal.png" alt="" height="100px"></a>
             <div class="signin-form">
                 <h2>Crear cuenta</h2>
                 <form method="POST" class="register-form" id="register-form">
@@ -42,7 +42,7 @@
                     <div class="form-button">
                         <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
                     </div>
-                    <a href="signIn.html" class="signup-image-link">Ya tengo cuenta</a>
+                    <a href="../IniciarSesion/signIn.html" class="signup-image-link">Ya tengo cuenta</a>
                 </form>
             </div>
         </div>
