Contacto terminado - Slider index terminado

--- a/index.html
+++ b/index.html
@@ -49,29 +49,32 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" id="imgSlider1">
+                    <div class="imgSliderCapa"></div>
                     <div class="container">
                       <div class="carousel-caption text-start">
-                        <h2>Customized solutions.</h2>
-                        <p class="opacity-75">We offer personalized solutions that adapt to your needs, carrying out projects from the conceptual phase to flawless execution.</p>
-                        <p><a class="btn btn-lg btn-dark" href="#">Know more</a></p>
+                        <h2>Tu Destino para el Estilo Único.</h2>
+                        <p class="opacity-75">En Opal, no solo vendemos zapatillas de marca, sino que ofrecemos una experiencia única centrada en el estilo personal de cada cliente.</p>
+                        <p><a class="btn btn-lg btn-dark" href="tienda.html">Visitar tienda</a></p>
                       </div>
                     </div>
                 </div>
                 <div class="carousel-item" id="imgSlider2">
+                    <div class="imgSliderCapa"></div>
                     <div class="container">
                         <div class="carousel-caption">
-                          <h2>We merge creativity with functionality.</h2>
-                          <p class="opacity-75">With a passion for design and a fresh perspective, our team of talented creators strive to exceed expectations.</p>
-                            <p><a class="btn btn-lg btn-dark" href="#">Know more</a></p>
+                          <h2>Servicios de Compra y Venta.</h2>
+                          <p class="opacity-75">Entendemos que cada cliente es único, y así es como tratamos cada transacción. Nuestro servicio de compra y venta personalizado te permite encontrar las zapatillas que se adaptan a tus gustos y necesidades específicas.</p>
+                            <p><a class="btn btn-lg btn-dark" href="subirProducto.html">Subir producto</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item" id="imgSlider3">
+                    <div class="imgSliderCapa"></div>
                     <div class="container">
                         <div class="carousel-caption text-end">
-                            <h2>Ready to take your project to the next level?</h2>
-                            <p>Contact us for an initial consultation and find out how we can make your vision shine.</p>
-                            <p><a class="btn btn-lg btn-dark" href="#">Contact us</a></p>
+                            <h2>Tu Satisfacción es Nuestra Prioridad.</h2>
+                            <p>En Opal, la satisfacción del cliente es nuestra máxima prioridad. Nos esforzamos por ofrecer un servicio impecable desde el momento en que exploras nuestro catálogo hasta que recibes tus zapatillas en la puerta de tu hogar.</p>
+                            <p><a class="btn btn-lg btn-dark" href="#">Contáctanos</a></p>
                         </div>
                     </div>
                 </div>
