--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="css/carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contacto.css">
     <title>Opal</title>
 </head>
 <body>
@@ -41,8 +42,33 @@
     </header>
     <main>
         <div class="container">
-            <div>
-                <div></div>
+            <div id="caseContact">
+                <div id="caseContactInfo">
+                    <h2>¡Contáctanos!</h2>
+                    <p>
+                        En Opal, valoramos la comunicación directa y estamos aquí para responder a tus preguntas y atender tus necesidades. 
+                        Ya sea que estés buscando más información sobre nuestros productos, desees realizar una compra especial o estés 
+                        interesado en vender tus zapatillas exclusivas, nuestro equipo está listo para ayudarte.
+                    </p>
+                    <h3>Información de contacto:</h3>
+                    <ul>
+                        <li>Teléfono
+                            <ul>
+                                <li>+34 963 41 52 85</li>
+                            </ul>
+                        </li>
+                        <li>Correo de información
+                            <ul>
+                                <li>info@opal.com</li>
+                            </ul>
+                        </li>
+                        <li>Correo de incidencias
+                            <ul>
+                                <li>ayuda@opal.com</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
                 <div id="formularioContacto">
                     <form action="procesar_formulario.php" method="post" enctype="multipart/form-data">
                         <label for="correo">Correo:</label>
