Menu desplegable creado

--- a/subirProducto.html
+++ b/subirProducto.html
@@ -13,12 +13,25 @@
 <body>
     <header>
         <nav>
+            <div id="header-menu-movil">
+                <button id="botonMenu">
+                    <img src="img/menu.png" alt="Logo de Pepote">
+                </button>
+                <nav id="header-menu-nav">
+                    <ul>
+                        <li><a href="">Tienda</a></li>
+                        <li><a href="subirProducto.html">Subir producto</a></li>
+                        <li><a href="">Sobre nosotros</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
             <div>
                 <a href="index.html">
                     <img src="img/LogoOpal.png" alt="Logo de Opal" height="80px">
                 </a>
             </div>
-            <div>
+            <div id="cajaBuscador">
                 <input type="text" placeholder="Buscar sneakers..." id="buscador">
             </div>
             <div>
