Registro e Inicio Sesion con Php

--- a/formulario/IniciarSesion/signIn.html
+++ b/formulario/IniciarSesion/signIn.html
@@ -14,7 +14,7 @@
             <a href="../../index.html"><img src="../../img/LogoOpal.png" alt="" height="100px"></a>
             <div class="signin-form">
                 <h2>Iniciar sesión</h2>
-                <form method="POST" class="register-form" id="login-form">
+                <form method="POST" class="register-form" id="login-form" action="signIn.php">
                     <div class="datosLogIn">
                         <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                         <input type="text" name="your_name" id="your_name" placeholder="Email"/>
