--- a/formulario/Registro/signUp.html
+++ b/formulario/Registro/signUp.html
@@ -14,14 +14,18 @@
             <a href="../../index.html"><img src="../../img/LogoOpal.png" alt="" height="100px"></a>
             <div class="signin-form">
                 <h2>Crear cuenta</h2>
-                <form method="POST" class="register-form" id="register-form">
+                <form method="POST" class="register-form" id="register-form" action="signUp.php">
                     <div class="datosLogIn">
-                        <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        <input type="text" name="name" id="name" placeholder="Username"/>
+                        <label for="nickname"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                        <input type="text" name="nickname" id="nickname" placeholder="Username"/>
                     </div>
                     <div class="datosLogIn">
                         <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                         <input type="text" name="name" id="name" placeholder="Tu nombre"/>
+                    </div>
+                    <div class="datosLogIn">
+                        <label for="subname"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                        <input type="text" name="subname" id="subname" placeholder="Tus apellidos"/>
                     </div>
                     <div class="datosLogIn">
                         <label for="email"><i class="zmdi zmdi-email"></i></label>
@@ -42,7 +46,7 @@
                     <div class="form-button">
                         <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
                     </div>
-                    <a href="../IniciarSesion/signIn.html" class="signup-image-link">Ya tengo cuenta</a>
+                    <a href="../IniciarSesion/signInComprobacion.php" class="signup-image-link">Ya tengo cuenta</a>
                 </form>
             </div>
         </div>
