--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
+    <script defer src="js/menuDesplegable.js"></script>
     <title>Opal</title>
 </head>
 <body>
@@ -252,6 +253,5 @@
             <p>© Copyright Opal 2024. All rights reserved. Privacy Policy - Legal Notice - Conditions of Sale and Withdrawal.</p>
         </div>
     </footer>
-    <script src="js/menuDesplegable.js"></script>
 </body>
 </html>
