--- a/subirProducto.html
+++ b/subirProducto.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/subirProducto.css">
+    <script defer src="js/menuDesplegable.js"></script>
     <title>Opal</title>
 </head>
 <body>
