Buscador menu desplegable - Creacion perfil

--- a/contacto.html
+++ b/contacto.html
@@ -25,6 +25,7 @@
                         <li><a href="subirProducto.html">Subir producto</a></li>
                         <li><a href="">Sobre nosotros</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
+                        <li><input type="text" placeholder="Buscar sneakers..." id="buscadorMovil"></li>
                     </ul>
                 </nav>
             </div>
