formularioContacto.js añadido

--- a/contacto.html
+++ b/contacto.html
@@ -148,5 +148,6 @@
             <p>© Copyright Opal 2024. All rights reserved. Privacy Policy - Legal Notice - Conditions of Sale and Withdrawal.</p>
         </div>
     </footer>
+    <script src="js/formularioContacto.js"></script>
 </body>
 </html>
