Corrección de fallos - Profile

--- a/profile.html
+++ b/profile.html
@@ -57,13 +57,16 @@
     <main>
         <div class="container">
             <div class="case">
-                <div>
-                    <img src="" alt="">
-                    <div>
-                        
+                <div class="caseProfile">
+                    <img src="img/pabloMotos.jpeg" alt="Foto de perfil">
+                    <div class="caseProfile-Info">
+                        <h2>PabloElMotorista69</h2>
+                        <h5>Nombre: <span>Pablo</span></h5>
+                        <h5>Apellidos: <span>Motos</span></h5>
+                        <h5>Correo: <span>pablogymrat@gmail.com</span></h5>
                     </div>
-                    <h2>Subir producto</h2>
                 </div>
+                <h2>Productos en venta</h2>
             </div>
         </div>
     </main>
