Creacion cambio contraseña - Script validar contraseña

--- a/formulario/Registro/signUp.html
+++ b/formulario/Registro/signUp.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../css/normalize.css">
     <link rel="stylesheet" href="../../css/signIn.css">
     <link rel="stylesheet" href="../fonts/material-icon/css/material-design-iconic-font.min.css">
+    <script defer src="../../js/validacionContraseña.js"></script>
     <title>Opal</title>
 </head>
 <body>
