Creacion de Sobre nostros - Enlaces

--- a/subirProducto.html
+++ b/subirProducto.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/subirProducto.css">
     <script defer src="js/menuDesplegable.js"></script>
+    <script defer src="js/formularioProducto.js"></script>
     <title>Opal</title>
 </head>
 <body>
@@ -129,6 +130,5 @@
             <p>© Copyright Opal 2024. All rights reserved. Privacy Policy - Legal Notice - Conditions of Sale and Withdrawal.</p>
         </div>
     </footer>
-    <script src="js/formularioProducto.js"></script>
 </body>
 </html>
