--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="">Tienda</a></li>
                         <li><a href="subirProducto.html">Subir producto</a></li>
-                        <li><a href="">Sobre nosotros</a></li>
+                        <li><a href="aboutUs.html">Sobre nosotros</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                         <li><input type="text" placeholder="Buscar sneakers..." id="buscadorMovil"></li>
                     </ul>
@@ -51,7 +51,7 @@
         <nav id="menu">
             <a href="">Tienda</a>
             <a href="subirProducto.html">Subir producto</a>
-            <a href="">Sobre nostros</a>
+            <a href="aboutUs.html">Sobre nostros</a>
             <a href="contacto.html">Contacto</a>
         </nav>
     </header>
