Avance sobre nosotros

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -59,7 +59,45 @@
             <video autoplay muted loop>
                 <source src="img/videoAboutUs.mp4" type="video/mp4">
             </video>
-            <div class="overlay"></div>
+            <div class="overlay">
+                <div id="infoVideo">
+                    <h2>The satisfaction of <span>selling</span> <br> well and <span>buying</span> better</h2>
+                </div>
+                <button>
+                    <a href="#servicios">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
+                        </svg>
+                    </a>
+                </button>
+            </div>
+        </div>
+        <div id="servicios">
+            <h2>Servicios</h2>
+            <h4>Porque nos interesa tu estilo</h4>
+            <div id="serviciosCase">
+                <div class="serviciosCaseInfo">
+                    <h3>Comprar</h3>
+                    <hr>
+                    <p>
+                        En nuestra plataforma, ofrecemos un servicio de compra de zapatillas que simplifica tu experiencia. Explora nuestra amplia selección de marcas y estilos, desde las últimas tendencias hasta modelos clásicos. Nuestro proceso de compra es fácil y seguro. ¡Encuentra tus zapatillas ideales y adquiérelas con solo unos clics!
+                    </p>
+                </div>
+                <div class="serviciosCaseInfo">
+                    <h3>Vender</h3>
+                    <hr>
+                    <p>
+                        ¿Tienes zapatillas en buen estado que ya no necesitas? Aprovecha nuestro servicio de venta. Registra tus zapatillas en nuestra plataforma, establece un precio justo y llega a una audiencia apasionada por el calzado. Con nuestra interfaz intuitiva, gestionar tus ventas nunca ha sido tan sencillo. ¡Haz espacio en tu armario y gana dinero con tus zapatillas!
+                    </p>
+                </div>
+                <div class="serviciosCaseInfo">
+                    <h3>Explorar</h3>
+                    <hr>
+                    <p>
+                        En ZapatillasPlus, nos importa tu estilo y preferencias. Nuestro servicio de asesoramiento personalizado está diseñado para ayudarte a encontrar las zapatillas perfectas. Ya sea que estés buscando el par ideal para una ocasión especial o quieras mantenerte al día con las últimas tendencias, nuestro equipo de expertos está aquí para guiarte. ¡Descubre nuevas opciones que se adapten a tu estilo único con nuestro servicio de asesoramiento personalizado!
+                    </p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
@@ -69,7 +107,7 @@
                 <h3>Menú</h3>
                 <a href="">Tienda</a>
                 <a href="subirProducto.html">Subir producto</a>
-                <a href="">Sobre nosotros</a>
+                <a href="aboutUs.html">Sobre nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </div>
             <div>
