--- a/contacto.html
+++ b/contacto.html
@@ -111,7 +111,7 @@
                 <h3>Menú</h3>
                 <a href="">Tienda</a>
                 <a href="subirProducto.html">Subir producto</a>
-                <a href="">Sobre nosotros</a>
+                <a href="aboutUs.html">Sobre nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </div>
             <div>
