--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         Creemos que el estilo es una extensión de la identidad de cada individuo, 
                         y estamos aquí para ayudarte a encontrar las zapatillas que reflejen tu personalidad única.
                     </p>
-                    <button><a href="">Leer más</a></button>
+                    <button><a href="aboutUs.html">Leer más</a></button>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
                 <h3>Menú</h3>
                 <a href="">Tienda</a>
                 <a href="subirProducto.html">Subir producto</a>
-                <a href="">Sobre nosotros</a>
+                <a href="aboutUs.html">Sobre nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </div>
             <div>
