--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
                     <ul>
                         <li><a href="">Tienda</a></li>
                         <li><a href="subirProducto.html">Subir producto</a></li>
-                        <li><a href="">Sobre nosotros</a></li>
+                        <li><a href="aboutUs.html">Sobre nosotros</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                         <li><input type="text" placeholder="Buscar sneakers..." id="buscadorMovil"></li>
                     </ul>
@@ -50,7 +50,7 @@
         <nav id="menu">
             <a href="">Tienda</a>
             <a href="subirProducto.html">Subir producto</a>
-            <a href="">Sobre nostros</a>
+            <a href="aboutUs.html">Sobre nostros</a>
             <a href="contacto.html">Contacto</a>
         </nav>
     </header>
@@ -77,7 +77,7 @@
                 <h3>Menú</h3>
                 <a href="">Tienda</a>
                 <a href="subirProducto.html">Subir producto</a>
-                <a href="">Sobre nosotros</a>
+                <a href="aboutUs.html">Sobre nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </div>
             <div>
@@ -114,6 +114,5 @@
             <p>© Copyright Opal 2024. All rights reserved. Privacy Policy - Legal Notice - Conditions of Sale and Withdrawal.</p>
         </div>
     </footer>
-    <script src="js/formularioProducto.js"></script>
 </body>
 </html>
