--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/aboutUs.css">
+    <link href="css/carousel.css" rel="stylesheet">
     <script defer src="js/menuDesplegable.js"></script>
     <title>Opal</title>
 </head>
@@ -61,7 +62,7 @@
             </video>
             <div class="overlay">
                 <div id="infoVideo">
-                    <h2>The satisfaction of <span>selling</span> <br> well and <span>buying</span> better</h2>
+                    <h2>La satisfacción de <span>vender</span> <br> bien y <span>comprar</span> mejor</h2>
                 </div>
                 <button>
                     <a href="#servicios">
@@ -80,25 +81,83 @@
                     <h3>Comprar</h3>
                     <hr>
                     <p>
-                        En nuestra plataforma, ofrecemos un servicio de compra de zapatillas que simplifica tu experiencia. Explora nuestra amplia selección de marcas y estilos, desde las últimas tendencias hasta modelos clásicos. Nuestro proceso de compra es fácil y seguro. ¡Encuentra tus zapatillas ideales y adquiérelas con solo unos clics!
+                        En nuestra plataforma, ofrecemos un servicio de compra de zapatillas que simplifica tu experiencia.
                     </p>
                 </div>
                 <div class="serviciosCaseInfo">
                     <h3>Vender</h3>
                     <hr>
                     <p>
-                        ¿Tienes zapatillas en buen estado que ya no necesitas? Aprovecha nuestro servicio de venta. Registra tus zapatillas en nuestra plataforma, establece un precio justo y llega a una audiencia apasionada por el calzado. Con nuestra interfaz intuitiva, gestionar tus ventas nunca ha sido tan sencillo. ¡Haz espacio en tu armario y gana dinero con tus zapatillas!
+                        ¿Tienes zapatillas en buen estado que ya no necesitas? Aprovecha nuestro servicio de venta. Registra tus zapatillas en nuestra plataforma, establece un precio justo y llega a una audiencia apasionada por el calzado.
                     </p>
                 </div>
                 <div class="serviciosCaseInfo">
-                    <h3>Explorar</h3>
+                    <h3>Asesoramiento</h3>
                     <hr>
                     <p>
-                        En ZapatillasPlus, nos importa tu estilo y preferencias. Nuestro servicio de asesoramiento personalizado está diseñado para ayudarte a encontrar las zapatillas perfectas. Ya sea que estés buscando el par ideal para una ocasión especial o quieras mantenerte al día con las últimas tendencias, nuestro equipo de expertos está aquí para guiarte. ¡Descubre nuevas opciones que se adapten a tu estilo único con nuestro servicio de asesoramiento personalizado!
+                        En Opal, nos importa tu estilo y preferencias. Nuestro servicio de asesoramiento personalizado está diseñado para ayudarte a encontrar las zapatillas perfectas.
                     </p>
                 </div>
             </div>
         </div>
+        <section  id="marcas">
+            <div class="container d-none d-md-flex">
+                <div class="row align-items-around">
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/nike.png" alt="Logo de Nike" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/Adidas_Logo.svg" alt="Logo de Adidas" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/New_balance.png" alt="Logo de New Balance" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/Converse_logo.svg.png" alt="Logo de Converse" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                    <div class="col-4 col-sm-3 col-md row align-items-center">
+                        <img src="img/Vans-logo.svg.png" alt="Logo de Vans" class="img-fluid mb-7 mb-md-0">
+                    </div>
+                </div>
+            </div>
+            <div id="carouselExample" class="carousel slide d-md-none">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/nike.png" alt="Logo de Nike" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/Adidas_Logo.svg" alt="Logo de Adidas" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/New_balance.png" alt="Logo de New Balance" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/Converse_logo.svg.png" alt="Logo de Converse" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container row align-items-center justify-content-center h-100">
+                        <img src="img/Vans-logo.svg.png" alt="Logo de Vans" class="img-fluid d-block w-75">
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="infoFooter">
