--- a/profile.html
+++ b/profile.html
@@ -66,7 +66,9 @@
                         <h5>Correo: <span>pablogymrat@gmail.com</span></h5>
                     </div>
                 </div>
-                <h2>Productos en venta</h2>
+                <div id="productos">
+                    <h2>Productos en venta</h2>
+                </div>
             </div>
         </div>
     </main>
