--- a/aboutUs.html
+++ b/aboutUs.html
@@ -39,8 +39,8 @@
             </div>
             <div>
                 <button id="registroButton">
-                    <a href="/formulario/signIn.html" id="registroButtonPC">Iniciar sesión/Registrarse</a>
-                    <a href="/formulario/signIn.html" id="registroButtonMobile">
+                    <a href="/formulario/Registro/signUp.html" id="registroButtonPC">Iniciar sesión/Registrarse</a>
+                    <a href="/formulario/Registro/signUp.html" id="registroButtonMobile">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                         </svg>
@@ -100,7 +100,41 @@
                 </div>
             </div>
         </div>
+        <div>
+
+        </div>
         <section  id="marcas">
+            <div id="marcasInfo">
+                <h2>Nuestras marcas</h2>
+                <h4>Estilo y Autenticidad en Cada Paso</h4>
+                <div class="container">
+                    <p class="text-center">
+                        Descubre el mundo de la moda y la autenticidad con las marcas principales que forman parte de nuestra plataforma dedicada a la compra y venta de zapatillas. En ZapatillasPlus, nos enorgullece colaborar con algunas de las marcas más reconocidas y respetadas en la industria del calzado.
+                    </p>
+                </div>
+                <div class="container">
+                    <div class="marcasInfoText">
+                        <div id="textoDerecha">
+                            <h3>gigantes de la moda</h3>
+                            <p>
+                                Entre nuestras marcas destacadas se encuentran gigantes de la moda deportiva como Nike, Adidas, y New Balance, que han dejado una huella imborrable en la cultura urbana. Desde estilos icónicos hasta innovaciones vanguardistas, estas marcas son sinónimo de calidad y autenticidad.
+                            </p>
+                        </div>
+                        <div class="marcasInfoImg">
+                            <img src="img/sneaker-air-jordan-11.png" alt="" height="250px">
+                        </div>
+                    </div>
+                    <div class="marcasInfoText">
+                        <div class="marcasInfoImg">
+                            <img src="img/sneaker-adidas-forum-low-x-bad-bunny-cloud-white.png" alt="" height="250px">
+                        </div>
+                        <div id="textoIzquierda">
+                            <h3>opciones clásicas y atemporales</h3>
+                            <p>Además, contamos con opciones clásicas y atemporales de Converse, que han acompañado a generaciones con su distintivo diseño. Y para aquellos que buscan la perfecta combinación entre comodidad y estilo, nuestras opciones de Vans ofrecen un toque urbano que marca la diferencia.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="container d-none d-md-flex">
                 <div class="row align-items-around">
                     <div class="col-4 col-sm-3 col-md row align-items-center">
