--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,9 +13,48 @@
     <title>Opal</title>
 </head>
 <body>
-    <?php
-        include './php/header.php';
-    ?>
+    <header>
+        <nav>
+            <div id="header-menu-movil">
+                <button id="botonMenu">
+                    <img src="img/menu.png" alt="Logo de Pepote">
+                </button>
+                <nav id="header-menu-nav">
+                    <ul>
+                        <li><a href="">Tienda</a></li>
+                        <li><a href="subirProducto.html">Subir producto</a></li>
+                        <li><a href="aboutUs.html">Sobre nosotros</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><input type="text" placeholder="Buscar sneakers..." id="buscadorMovil"></li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <a href="index.html">
+                    <img src="img/LogoOpal.png" alt="Logo de Opal" height="80px">
+                </a>
+            </div>
+            <div id="cajaBuscador">
+                <input type="text" placeholder="Buscar sneakers..." id="buscador">
+            </div>
+            <div>
+                <button id="registroButton">
+                    <a href="/formulario/Registro/signUp.html" id="registroButtonPC">Iniciar sesión/Registrarse</a>
+                    <a href="/formulario/Registro/signUp.html" id="registroButtonMobile">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+                        </svg>
+                    </a>
+                </button>
+            </div>
+        </nav>
+        <nav id="menu">
+            <a href="">Tienda</a>
+            <a href="subirProducto.html">Subir producto</a>
+            <a href="aboutUs.html">Sobre nostros</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+    </header>
     <main>
         <div class="videoCase">
             <video autoplay muted loop>
@@ -65,7 +104,7 @@
 
         </div>
         <section  id="marcas">
-        <div id="marcasInfo">
+            <div id="marcasInfo">
                 <h2>Nuestras marcas</h2>
                 <h4>Estilo y Autenticidad en Cada Paso</h4>
                 <div class="container">
