Estilo tienda - Checkout terminado - Foto perfil

--- a/formulario/IniciarSesion/signIn.html
+++ b/formulario/IniciarSesion/signIn.html
@@ -31,7 +31,10 @@
                         <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                     </div>
                 </form>
-                <a href="../Registro/signUp.html" class="signup-image-link">Crear cuenta</a>
+                <div id="formularioEnlaces">
+                    <a href="../Registro/signUp.html" class="signup-image-link">Crear cuenta</a>
+                    <a href="../Cambiar contraseña/formularioCambiarContraseña.html" class="signup-image-link">Recuperar contraseña</a>
+                </div>
             </div>
         </div>
     </main>
