Confirmaciones compra, venta y registro

--- a/formulario/confirmacionProducto.html
+++ b/formulario/confirmacionProducto.html
@@ -18,14 +18,17 @@
         <div id="formulario">
             <a href="../index.html"><img src="../img/LogoOpal.png" alt="" height="100px"></a>
             <div class="signin-form text-align-center">
-                <h2>Cuenta creada satisfactoriamente</h2>
+                <h2>
+                    Producto subido correctamente,<br>
+                    será validado lo antes posible
+                </h2>
             </div>
         </div>
     </main>
     <script>
         setTimeout(function() {
           window.location.href = "../index.php";
-        }, 3000);
+        }, 4000);
     </script>
 </body>
 </html>
