--- a/formulario/Cambiar contraseña/formularioCambiarContraseña.html
+++ b/formulario/Cambiar contraseña/formularioCambiarContraseña.html
@@ -15,7 +15,7 @@
             <img src="../../img/LogoOpal.png" alt="" height="100px">
             <div class="signin-form">
                 <h2>Recuperar contraseña</h2>
-                <form method="POST" class="register-form" id="login-form" action="signIn.php">
+                <form method="POST" class="register-form" id="login-form" action="solicitudCambio.php">
                     <div class="datosLogIn">
                         <label for="email"><i class="zmdi zmdi-email"></i></label>
                         <input type="email" name="email" id="email" placeholder="Email"/>
