--- a/formulario/IniciarSesion/signIn.html
+++ b/formulario/IniciarSesion/signIn.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <div id="formulario">
-            <a href="../../index.html"><img src="../../img/LogoOpal.png" alt="" height="100px"></a>
+            <a href="../../index.php"><img src="../../img/LogoOpal.png" alt="" height="100px"></a>
             <div class="signin-form">
                 <h2>Iniciar sesión</h2>
                 <form method="POST" class="register-form" id="login-form" action="signIn.php">
