--- a/formulario/Registro/signUp.html
+++ b/formulario/Registro/signUp.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div id="formulario">
-            <a href="../../index.html"><img src="../../img/LogoOpal.png" alt="" height="100px"></a>
+            <a href="../../index.php"><img src="../../img/LogoOpal.png" alt="" height="100px"></a>
             <div class="signin-form">
                 <h2>Crear cuenta</h2>
                 <form method="POST" class="register-form" id="register-form" action="signUp.php">
